build: 更新 .gitignore 并移除 imputation 相关代码
- 在 .gitignore 中添加 output/ 目录以忽略输出文件
- 删除 lwh_code/imputation 目录下的所有文件和子目录

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ wheels/
 .LSOverride
 
 # Data directories - exclude large data files
+output/
 data/
 converted_matrices/
 converted_matrices_by_stage_20k/
