fix(scripts): 修复接触衰减曲线分析和 UMAP 绘图脚本
- 更新接触衰减曲线分析脚本，使用原始计数数据进行计算
- 修改数据路径和环境激活方式，确保脚本正确运行
- 更新 UMAP 绘图脚本，使用新的输入数据路径
- 添加新的输出目录到 .gitignore 文件

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ imputed_matrices_by_stage_20k/
 test_impute_output/
 lwh_schicluster_impute_code/imputation_mac/logs/
 hires_data_processing/outputs/
+3_create_contact_decay_profile/outputs/
+4_contact_decay_profile_2_h5ad/json2h5ad/output
 
 # Large data files
 *.hdf5
